# beans

./: .gitignore  ARCHITECTURE.md  AUDIT.md  BEANS_BEST_PRACTICES.md  CHANGELOG.md  Cargo.toml  DESIGN-bean-run-native.md  HANDOFF_13.5.md  LICENSE  README.md  TODO.md  clippy.toml  rustfmt.toml  test_extract_paths.rs
.beans/: 1-implement-verify-field-and-gate-on-close.md  1.1.yaml  1.2.yaml  1.3.yaml  1.yaml  10-expand-gitignore-with-platform-artifacts.md  10.yaml  11-refactor-md-frontmatter.md  11-verify-on-claim-run-verify-before-granting-claim.md  11.1-refactor-md-parser.md  11.2-refactor-migration-script.md  11.3-refactor-show-render.md  118-smart-wave-dispatching.md  118.1-critical-path-weight-computation-and-prioritizatio.md  118.2-file-conflict-avoidance-in-ready-queue.md  118.3-smart-dry-run-display-with-critical-path-and-confl.md  12-bean-archive-system.md  12-refactor-md-parser.md  12-spro-sandboxing-git-worktrees-for-parallel-agents.md  12.1-implement-git-worktree-isolation-in-spro-spawn.md  12.1.1-add-is-archived-field.md  12.1.2-archive-path-utilities.md  12.1.3-implement-archive-command.md  12.1.4-implement-unarchive-command.md  12.3-add-worktree-merge-to-bn-close.md  12.3.2-implement-worktree-merge-logic.md  12.3.3-integrate-worktree-merge-into-bn-close.md  12.3.3.1-add-worktree-merge-handling-to-cmdclose.md  12.3.3.2-add-worktree-merge-integration-tests-for-close.md  13-bean-merge-conflict-resolution-3-way-merge.md  13-refactor-migration-script.md  13-update-naming-convention.md  13.1-add-conflict-types-and-hash-tracking-to-bean.md  13.1-slug-generation-utility.md  13.2-update-bean-struct.md  13.3-update-file-discovery.md  13.4-update-create-command.md  13.5-bulk-update-command-operations.md  14-refactor-show-render.md  15-bean-archive-system.md  (+76 more)
.beans/archive/: 10-expand-gitignore-with-platform-artifacts.md  11.1-refactor-md-parser.md  11.2-refactor-migration-script.md  11.3-refactor-show-render.md  12.1-archive-and-unarchive-commands.md  13.3-update-file-discovery.md  2-extract-duplicate-utility-functions.md  3-add-attempts-and-max-attempts-fields.md  4-refactor-graph-functions-to-accept-index.md  5-validate-bean-id-format.md  7-escape-shell-commands-in-verify-gate.md  8-remove-duplicate-utility-functions.md  README.md  SCHEMA.md  config-config.md  index-index.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.vibecheck/: vibecheck.db-shm  vibecheck.db-wal
docs/: BEST_PRACTICES.md  CONFLICT_RESOLUTION.md  SKILL.md  bean_14.1_implementation_notes.md  fail-then-pass-design.md
docs/design/: CONFLICT_RESOLUTION.md
src/: agent_presets.rs  bean.rs  blocking.rs  cli.rs  config.rs  ctx_assembler.rs  daemon.rs  discovery.rs  failure.rs  graph.rs  hooks.rs  index.rs  lib.rs  locks.rs  main.rs  merge.rs  orchestrator.rs  pi_output.rs  project.rs  prompt.rs  relevance.rs  selector.rs  spawner.rs  stream.rs  timeout.rs  tokens.rs  util.rs  worktree.rs
src/bean/: mod.rs  types.rs
tests/: adopt_test.rs  cli_tests.rs  mcp_test.rs  test_ctx_assembler.rs
tools/: bpick  migrate_beans.rs
(+192 files in other folders)
