[package]
name = "bn"
version = "0.2.0"
edition = "2021"
description = "Task tracker for coding agents"
license = "Apache-2.0"
repository = "https://github.com/opus-workshop/beans"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["editor", "fuzzy-select"] }
dirs = "5"
glob = "0.3"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
shell-escape = "0.1"
termimad = "0.24"

[dev-dependencies]
tempfile = "3"
